@@ -70,6 +70,8 @@ class Net::SSLeay {
   
   native method get_shutdown : int ();
   
+  native method pending : int ();
+  
   # This native function is not documented in OpenSSL, but Perl's IO::Socket::SSL uses this method
   native method set_SSL_CTX : Net::SSLeay::SSL_CTX ($ctx : Net::SSLeay::SSL_CTX);
   
