@@ -33,6 +33,7 @@
     * Add Net::SSLeay::OPENSSL#add_ssl_algorithms method.
     * Add Net::SSLeay::OPENSSL#add_all_algorithms method.
     * Add Net::SSLeay#get_shutdown method.
+    * Add Net::SSLeay#pending method.
     
 0.009 2024-11-08
   [Requirement Changes]
